<resources>
    <string name="app_name">Little App-rentice</string>
    <string name="login_separator">Iniciar sesión</string>
    <string name="campo_usuario_lgin">Usuario</string>
    <string name="campo_usuario_lgin_hint">Ejemplo: Juan Perez</string>
    <string name="campo_pass_lgin">Contraseña</string>
    <string name="campo_pass_lgin_hint">Ejemplo: 123456</string>
    <string name="reg_act">Registrarse</string>
    <string name="btn_login">Iniciar</string>
    <string name="campo_nombre">Nombre</string>
    <string name="campo_apellidos">Apellidos</string>
    <string name="campo_tel">Telefono</string>
    <string name="campo_correo">Correo</string>
    <string name="campo_contrasenia">Contraseña</string>
    <string name="campo_rep_contrasenia">Repetir contraseña</string>
    <string name="check_acuerdos">He leido y acepto terminos y condiciones</string>
    <string name="btn_aceptar">Registrarse</string>
    <string name="text_registro">Por favor, ingrese los siguientes datos</string>
    <string name="title_activity_main_tutor">MainTutor</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
</resources>
